examples/test/testpolicy10208.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10208
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key2: value6
      key47: value41
      key17: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value30
      podSelector:
        matchLabels:
          key43: value32
